Editing after feedback, TOC update

--- a/defender-for-iot/TOC.yml
+++ b/defender-for-iot/TOC.yml
@@ -24,6 +24,12 @@
       items:
       - name: Monitor site security
         href: monitor-site-security.md         
+    - name: Discover devices
+      items:
+      - name: Overview
+        href: device-discovery.md
+      - name: Discover and manage devices
+        href: manage-devices-inventory.md
     - name: Investigate and remediate vulnerabilities
       items:
       - name: Overview
@@ -37,8 +43,4 @@
     - name: Manage
       items:
       - name: Manage sites
-        href: manage-sites.md
-      - name: Manage OT devices in the inventory
-        href: manage-devices-inventory.md
-      - name: License admin centre
-        href: license-admin.md  
+        href: manage-sites.md           
