--- a/defender-for-iot/index.yml
+++ b/defender-for-iot/index.yml
@@ -1,7 +1,7 @@
 ### YamlMime:Landing
 
 title: Microsoft Defender for IoT in the Defender portal (Preview) documentation # < 60 chars
-summary: Microsoft Defender for IoT provides visibility and threat protection for IoT/OT environments while reducing cyber risk through continuous vulnerability discovery, risk-based prioritization, and remediation. # < 160 chars
+summary: Microsoft Defender for IoT in the Defender portal (Preview) provides visibility and threat protection for IoT/OT environments while reducing cyber risk through continuous vulnerability discovery, risk-based prioritization, and remediation. # < 160 chars
 
 metadata:
   title: Microsoft Defender for IoT in the Defender portal (Preview) documentation # Required; page title displayed in search results. Include the brand. < 60 chars.
