--- a/defender-for-iot/TOC.yml
+++ b/defender-for-iot/TOC.yml
@@ -22,12 +22,12 @@
       items:
       - name: Monitor site security
         href: monitor-site-security.md         
-    - name: Investigate and remediate vulnerabilities
+    - name: Prioritize and remediate vulnerabilities
       items:
       - name: Overview
         href: discover-vulnerabilities-overview.md
-      - name: Discover vulnerabilities
-        href: discover-vulnerabilities.md
+      - name: Prioritize vulnerabilities
+        href: prioritize-vulnerabilities.md
     - name: Investigate and remediate threats
       items:
       - name: Investigate alerts
@@ -36,7 +36,3 @@
       items:
       - name: Manage sites
         href: manage-sites.md
-      - name: Manage OT devices in the inventory
-        href: manage-devices-inventory.md
-      - name: License admin centre
-        href: license-admin.md  
