--- a/defender-for-iot/TOC.yml
+++ b/defender-for-iot/TOC.yml
@@ -6,7 +6,7 @@
   items:
     - name: Overview
       items:
-      - name: What is Microsoft Defender for IoT?
+      - name: What is Microsoft Defender for IoT in the Defender portal?
         href: microsoft-defender-iot.md      
       - name: Site security
         href: site-security-overview.md
