--- a/defender-for-iot/TOC.yml
+++ b/defender-for-iot/TOC.yml
@@ -36,7 +36,7 @@
         href: prioritize-vulnerabilities.md
     - name: Investigate and remediate threats
       items:
-      - name: Investigate alerts
+      - name: Investigate incidents and alerts
         href: investigate-threats.md
     - name: Manage
       items:
