--- a/defender-for-iot/TOC.yml
+++ b/defender-for-iot/TOC.yml
@@ -28,7 +28,7 @@
         href: device-discovery.md
       - name: Discover and manage devices
         href: manage-devices-inventory.md
-    - name: Investigate and remediate vulnerabilities       
+    - name: Prioritize and remediate vulnerabilities       
       items:
       - name: Overview
         href: discover-vulnerabilities-overview.md
