--- a/defender-xdr/TOC.yml
+++ b/defender-xdr/TOC.yml
@@ -24,6 +24,8 @@
           href: microsoft-365-defender-portal.md
         - name: Defender for Endpoint
           href: microsoft-365-security-center-mde.md
+        - name: Defender for IoT
+          href: /defender-for-iot/microsoft-defender-iot
         - name: Defender for Office 365
           href: microsoft-365-security-center-mdo.md
         - name: Defender for Identity
