--- a/defender-for-iot/TOC.yml
+++ b/defender-for-iot/TOC.yml
@@ -16,8 +16,12 @@
         href: prerequisites.md            
       - name: Get started
         href: get-started.md  
+      - name: Set up RBAC for Site security
+        href: set-up-rbac.md   
       - name: Set up sites
         href: set-up-sites.md
+      - name: Set up permissions
+        href: permissions.md 
     - name: Monitor site security
       items:
       - name: Monitor site security
