--- a/defender/index.yml
+++ b/defender/index.yml
@@ -191,12 +191,10 @@ additionalContent:
          - url: /security-exposure-management/microsoft-security-exposure-management
            text: Microsoft Security Exposure Management
 
-     - title: Microsoft Defender for IoT 
+     - title: Microsoft Defender for IoT in the Microsoft Defender portal (Preview) 
        links:
-        - url: /azure/defender-for-iot/organizations/overview
-          text: Microsoft Defender for IoT for end-user organizations
-        - url: /azure/defender-for-iot/device-builders/overview
-          text: Microsoft Defender for IoT for device builders
+        - url: /defender-for-iot/microsoft-defender-iot
+          text: Microsoft Defender for IoT in the Microsoft Defender portal
 
      - title: Microsoft Defender for Cloud
        links:
