--- a/defender/index.yml
+++ b/defender/index.yml
@@ -84,6 +84,22 @@ conceptualContent:
            text: See more
            url: /defender-endpoint/
 
+        - title: Microsoft Defender for IoT
+          summary: Protect your IoT/OT environments
+          links:
+          - url: /defender-for-iot/microsoft-defender-iot
+            itemType: overview
+            text: Overview          
+          - url: /defender-for-iot/get-started
+            itemType: get-started
+            text: Get started
+          - url: https://techcommunity.microsoft.com/t5/microsoft-defender-for-iot-blog/bg-p/MicrosoftDefenderIoTBlog
+            itemType: concept
+            text: Microsoft Defender for IoT technical community          
+          footerLink:
+           text: See more
+           url: /defender-for-iot/
+
         - title: Microsoft Defender for Office 365
           summary: Protect your email, prevent phishing attacks, and protect your collaboration tools
           links: 
@@ -189,12 +205,7 @@ additionalContent:
      - title: Microsoft Security Exposure Management
        links:
          - url: /security-exposure-management/microsoft-security-exposure-management
-           text: Microsoft Security Exposure Management
-
-     - title: Microsoft Defender for IoT in the Microsoft Defender portal (Preview) 
-       links:
-        - url: /defender-for-iot/microsoft-defender-iot
-          text: Microsoft Defender for IoT in the Microsoft Defender portal
+           text: Microsoft Security Exposure Management     
 
      - title: Microsoft Defender for Cloud
        links:
