--- a/defender-for-iot/index.yml
+++ b/defender-for-iot/index.yml
@@ -51,6 +51,8 @@ landingContent:
         links: 
         - text: Set up sites
           url: set-up-sites.md
+        - text: Enterprise for IoT
+          url: enterprise-for-iot.md
 
 # Card
   - title: How-to
