--- a/exposure-management/TOC.yml
+++ b/exposure-management/TOC.yml
@@ -70,3 +70,5 @@
         href: /azure/defender-for-cloud
       - name: Entra
         href: /entra/
+      - name: Defender External Attack Surface Management
+        href: /azure/external-attack-surface-management/
