--- a/defender-for-iot/TOC.yml
+++ b/defender-for-iot/TOC.yml
@@ -18,7 +18,7 @@
         href: prerequisites.md            
       - name: Get started
         href: get-started.md  
-      - name: Set up RBAC for Site security
+      - name: Set up RBAC for site security
         href: set-up-rbac.md   
       - name: Set up sites
         href: set-up-sites.md
