updated TOC and acrolinx

--- a/exposure-management/TOC.yml
+++ b/exposure-management/TOC.yml
@@ -29,7 +29,9 @@
       - name: Overview
         href: critical-asset-management.md
       - name: Review and classify critical assets
-        href: classify-critical-assets.md  
+        href: classify-critical-assets.md
+      - name: Criticality levels
+        href: criticality-levels.md
     - name: Work with attack paths
       items:      
         - name: Overview
