--- a/defender-for-iot/TOC.yml
+++ b/defender-for-iot/TOC.yml
@@ -11,7 +11,11 @@
       - name: Site security
         href: site-security-overview.md     
       - name: Enterprise for IoT
-        href: enterprise-for-iot.md      
+        items:
+          - name: Enterprise for IoT cverview
+            href: enterprise-for-iot.md
+          - name: Get started with enterprise for IoT
+            href: enterprise-for-iot-get-started.md      
     - name: Get started
       items:
       - name: Prerequisites
