--- a/defender-xdr/breadcrumb/toc.yml
+++ b/defender-xdr/breadcrumb/toc.yml
@@ -1,10 +1,19 @@
 - name: 'Microsoft Defender'
-  tocHref: /azure/
+  tocHref: /defender/
   topicHref: /defender/index
   items:
-   - name: 'Microsoft Defender XDR'
-    tocHref: /azure/sentinel/
+  - name: 'Microsoft Defender XDR'
+    tocHref: /defender-xdr/
     topicHref: /defender-xdr/index
   - name: Microsoft Defender XDR
     tocHref: /defender-for-identity/
     topicHref: /defender-xdr/index 
+
+- name: 'Microsoft Defender'
+  tocHref: /azure/
+  topicHref: /defender/index
+  items:
+  - name: 'Microsoft Defender XDR'
+    tocHref: /azure/sentinel/
+    topicHref: /defender-xdr/index
+
