--- a/defender-xdr/breadcrumb/toc.yml
+++ b/defender-xdr/breadcrumb/toc.yml
@@ -1,3 +1,5 @@
+
+## Defender XDR default breadcrumb
 - name: 'Microsoft Defender'
   tocHref: /defender/
   topicHref: /defender/index
@@ -5,10 +7,8 @@
   - name: 'Microsoft Defender XDR'
     tocHref: /defender-xdr/
     topicHref: /defender-xdr/index
-  - name: Microsoft Defender XDR
-    tocHref: /defender-for-identity/
-    topicHref: /defender-xdr/index 
 
+## Azure override
 - name: 'Microsoft Defender'
   tocHref: /azure/
   topicHref: /defender/index
@@ -16,4 +16,13 @@
   - name: 'Microsoft Defender XDR'
     tocHref: /azure/sentinel/
     topicHref: /defender-xdr/index
+
+## Defender for Identity override
+- name: 'Microsoft Defender'
+  tocHref: /defender/
+  topicHref: /defender/index
+  items:
+  - name: Microsoft Defender XDR
+    tocHref: /defender-for-identity/
+    topicHref: /defender-xdr/index 
 
