--- a/defender-office-365/TOC.yml
+++ b/defender-office-365/TOC.yml
@@ -341,6 +341,7 @@
          - name: Email security reports
            href: reports-email-security.md
          - name: Defender for Office 365 reports
+           href: reports-defender-for-office-365.md
        - name: Safe Documents in Microsoft 365 A5 or E5 Security
          items:
          - name: Safe Documents in A5 or E5 Security
