--- a/defender-office-365/quarantine-faq.yml
+++ b/defender-office-365/quarantine-faq.yml
@@ -81,6 +81,9 @@ sections:
 
           If the quarantine policy requires users to request the release of messages or requires admins to release messages, an admin must [approve the release request](quarantine-admin-manage-messages-files.md#approve-or-deny-release-requests-from-users-for-quarantined-email) or [release the message](quarantine-admin-manage-messages-files.md#release-quarantined-email) before the message is available to users.
 
+          Note that presets policies does not allow for the customization of Quarantine policies. 
+
+
       - question: |
           What messages can end users access in quarantine?
         answer: |
@@ -93,7 +96,7 @@ sections:
       - question: |
           How can I prevent users from accessing quarantined messages?
         answer: |
-          The default quarantine policy named AdminOnlyAccessPolicy prevents any user interaction with their quarantined messages. By default, this quarantine policy is used for messages that were quarantined as malware or high confidence phishing. In custom policies or the default policy for [protection features that support quarantining messages](quarantine-policies.md#step-2-assign-a-quarantine-policy-to-supported-features), admins can specify the AdminOnlyAccessPolicy as the quarantine policy to use.
+          The default quarantine policy named AdminOnlyAccessPolicy prevents any user interaction with their quarantined messages. By default, this quarantine policy is used for messages that were quarantined as malware or high confidence phishing. In custom policies or the default policy for [protection features that support quarantining messages](quarantine-policies.md#step-2-assign-a-quarantine-policy-to-supported-features), admins can specify the AdminOnlyAccessPolicy as the quarantine policy to use. please note that you can prevent end users from accessing security.microsoft.com/quarantine
 
       - question: |
           How do I find out why a message was quarantined?
@@ -111,6 +114,8 @@ sections:
 
           When a message expires from quarantine, you can't recover it.
 
+          please note that messages from blocked senders are hidden by default from the Quarantine view. User needs to unselect blocked sender filter in Quarantine to see all messages coming from blocked senders
+
       - question: |
           A message was released from quarantine, but the original recipient can't find it. How can I determine what happened to the message?
         answer: |
@@ -120,6 +125,10 @@ sections:
             - The released message never arrives in the recipient's Inbox.
 
             Verify that you aren't using third party filtering before you open a support ticket about these issues.
+
+            In the case there is no third party security vendor preventing the message from reaching the user inbox, then the Admin can use force release functionality to release message (if the first release did not work) 
+
+            Admin should try to release to an alternate mailbox if the force flag release does not work after third party filtering vendor is turned off 
 
           - Inbox rules ([created by users in Outlook](https://support.microsoft.com/office/c24f5dea-9465-4df4-ad17-a50704d66c59) or by admins using the **\*-InboxRule** cmdlets in Exchange Online PowerShell) can move or delete messages from the Inbox.
 
@@ -132,12 +141,16 @@ sections:
 
           Verify that you aren't using third party filtering before you open a support ticket about this issue.
 
+          Admins can also use Audit log to see who released a message from Quarantine
+
       - question: |
           Can I release or report more than one quarantined message at a time?
         answer: |
           In the Microsoft Defender portal, you can select and release up to 100 messages at a time.
 
           Admins can use the [Get-QuarantineMessage](/powershell/module/exchange/get-quarantinemessage) and [Release-QuarantineMessage](/powershell/module/exchange/release-quarantinemessage) cmdlets in Exchange Online PowerShell or standalone EOP PowerShell to find and release quarantined messages in bulk, and to report false positives in bulk.
+
+          Admins can also perform bulk delete operation from thier end 
 
       - question: |
           Are wildcards supported when searching for quarantined messages? Can I search for quarantined messages for a specific domain?
@@ -200,6 +213,8 @@ sections:
 
           Also, the protection policies in [preset security policies](preset-security-policies.md) are always applied _before_ custom protection policies. A user who's defined in the Standard or Strict preset security policy will never get a customized protection policy where the quarantine policy is customized to turn on quarantine notifications. For more information, see [Policy settings in preset security policies](preset-security-policies.md#policy-settings-in-preset-security-policies)
 
+          please note that Quarantine notification are not enabled for Exchange transport rule messages and Data Loss prevention messages as those messages have the AdminOnly Quarantine Policy. Quarantine notification will also not be generated for messages with DefaultFullAccess Quarantine Policy 
+          
       - question: |
           How do I customize quarantine notifications to add a custom logo?
         answer: |
@@ -209,6 +224,8 @@ sections:
           What permissions are required for admins to download or release messages from quarantine?
         answer: |
           See the permissions entry [here](quarantine-admin-manage-messages-files.md#what-do-you-need-to-know-before-you-begin).
+
+          please note that Admins can release Quarantine messages to external recipient that are not present in thier organization. 
 
           > [!TIP]
           > The ability to manage quarantined messages using [Exchange Online permissions](/exchange/permissions-exo/permissions-exo) ended in February 2023 per MC447339.
@@ -224,3 +241,41 @@ sections:
           I can't preview a quarantined Microsoft Teams message. What's going on?
         answer: |
           If a user deletes the message from the Teams client, the message is gone, so Preview isn't available in quarantine for the deleted message.
+
+           - question: |
+          I can't see the block sender action button and the Approve release button. What's going on?
+        answer: |
+          Block sender action is disabled by default for Quarantine messages. However, Admins can create a custom Quarantine policy to include block sender action for end users 
+
+          The Approve release button has been retired and replaced by the release button
+
+           - question: |
+          Filter and search is not working. What's going on?
+        answer: |
+          The search box only applies to loaded Quarantine messages. 
+          
+          To filter by internet message ID, You need to ensure that the pointed brackets <> are always inluded (even on PowerShell) 
+
+
+         - question: |
+          Released Quarantine messages are still showing up in Quarantine. What's going on?
+        answer: |
+          Released messages will still show up/remain in Quarantine unless it is explicitly deleted from Quarantine 
+
+          - question: |
+          Release request Alert are not getting generated. What's going on?
+        answer: |
+          Audit log needs to enabled in order for Release request alert to be generated
+
+          - question: |
+          Duplicate / Multiple Quarantine notification sent to the same user  
+        answer: |
+          mutiple/duplicate Quarantine notification will be sent to a sender address with different alias if SendFromAliasEnabled is True 
+
+
+        - question: |
+          I cant see all the recipient of a Quarantine message. What's going on?
+        answer: |
+          For a Quarantine message with a large number of recipients, we do not show all the recipients in the UX or Cmdlet. However, the Admin can use the View message header or preview message functionality to see all the recipients  
+
+          
