--- a/defender-office-365/quarantine-faq.yml
+++ b/defender-office-365/quarantine-faq.yml
@@ -6,7 +6,7 @@ metadata:
   ms.author: chrisda
   author: chrisda
   manager: deniseb
-  ms.date: 11/3/2023
+  ms.date: 08/05/2024
   audience: ITPro
   ms.topic: faq
 
@@ -81,7 +81,7 @@ sections:
 
           If the quarantine policy requires users to request the release of messages or requires admins to release messages, an admin must [approve the release request](quarantine-admin-manage-messages-files.md#approve-or-deny-release-requests-from-users-for-quarantined-email) or [release the message](quarantine-admin-manage-messages-files.md#release-quarantined-email) before the message is available to users.
 
-          Note that presets policies does not allow for the customization of Quarantine policies. 
+          You can't customize quarantine policies in preset security policies.
 
 
       - question: |
@@ -96,7 +96,7 @@ sections:
       - question: |
           How can I prevent users from accessing quarantined messages?
         answer: |
-          The default quarantine policy named AdminOnlyAccessPolicy prevents any user interaction with their quarantined messages. By default, this quarantine policy is used for messages that were quarantined as malware or high confidence phishing. In custom policies or the default policy for [protection features that support quarantining messages](quarantine-policies.md#step-2-assign-a-quarantine-policy-to-supported-features), admins can specify the AdminOnlyAccessPolicy as the quarantine policy to use. please note that you can prevent end users from accessing security.microsoft.com/quarantine
+          The default quarantine policy named AdminOnlyAccessPolicy prevents any user interaction with their quarantined messages. By default, this quarantine policy is used for messages that were quarantined as malware or high confidence phishing. In custom policies or the default policy for [protection features that support quarantining messages](quarantine-policies.md#step-2-assign-a-quarantine-policy-to-supported-features), admins can specify the AdminOnlyAccessPolicy as the quarantine policy to use. You can prevent end users from accessing `security.microsoft.com/quarantine`.
 
       - question: |
           How do I find out why a message was quarantined?
@@ -114,7 +114,7 @@ sections:
 
           When a message expires from quarantine, you can't recover it.
 
-          please note that messages from blocked senders are hidden by default from the Quarantine view. User needs to unselect blocked sender filter in Quarantine to see all messages coming from blocked senders
+          By default, messages from blocked senders are hiddenfrom view in quarantine. Users need to select **Filter** and then deselect **Don't show blocked senders** to see all messages coming from blocked senders.
 
       - question: |
           A message was released from quarantine, but the original recipient can't find it. How can I determine what happened to the message?
@@ -126,9 +126,9 @@ sections:
 
             Verify that you aren't using third party filtering before you open a support ticket about these issues.
 
-            In the case there is no third party security vendor preventing the message from reaching the user inbox, then the Admin can use force release functionality to release message (if the first release did not work) 
+            If a third party filter isn't preventing the message from reaching the user's Inbox, then admins can use force release functionality to release message (if the first release didn't work).
 
-            Admin should try to release to an alternate mailbox if the force flag release does not work after third party filtering vendor is turned off 
+            Admin should try to release the message to an alternate mailbox if the forced release doesn't work after third party filtering vendor is turned off.
 
           - Inbox rules ([created by users in Outlook](https://support.microsoft.com/office/c24f5dea-9465-4df4-ad17-a50704d66c59) or by admins using the **\*-InboxRule** cmdlets in Exchange Online PowerShell) can move or delete messages from the Inbox.
 
@@ -141,7 +141,7 @@ sections:
 
           Verify that you aren't using third party filtering before you open a support ticket about this issue.
 
-          Admins can also use Audit log to see who released a message from Quarantine
+          Admins can also use the audit log to see who released a message from Quarantine.
 
       - question: |
           Can I release or report more than one quarantined message at a time?
@@ -150,7 +150,7 @@ sections:
 
           Admins can use the [Get-QuarantineMessage](/powershell/module/exchange/get-quarantinemessage) and [Release-QuarantineMessage](/powershell/module/exchange/release-quarantinemessage) cmdlets in Exchange Online PowerShell or standalone EOP PowerShell to find and release quarantined messages in bulk, and to report false positives in bulk.
 
-          Admins can also perform bulk delete operation from thier end 
+          Admins can also bulk delete messages.
 
       - question: |
           Are wildcards supported when searching for quarantined messages? Can I search for quarantined messages for a specific domain?
@@ -213,8 +213,8 @@ sections:
 
           Also, the protection policies in [preset security policies](preset-security-policies.md) are always applied _before_ custom protection policies. A user who's defined in the Standard or Strict preset security policy will never get a customized protection policy where the quarantine policy is customized to turn on quarantine notifications. For more information, see [Policy settings in preset security policies](preset-security-policies.md#policy-settings-in-preset-security-policies)
 
-          please note that Quarantine notification are not enabled for Exchange transport rule messages and Data Loss prevention messages as those messages have the AdminOnly Quarantine Policy. Quarantine notification will also not be generated for messages with DefaultFullAccess Quarantine Policy 
-          
+          Quarantine notifications aren't enabled for messages quarantined by Exchange mail flow rules (transport rules) or data loss prevention (DLP). These messages have the AdminOnly quarantine policy. Quarantine notifications are also no generated for messages with DefaultFullAccess quarantine policy.
+
       - question: |
           How do I customize quarantine notifications to add a custom logo?
         answer: |
@@ -225,7 +225,7 @@ sections:
         answer: |
           See the permissions entry [here](quarantine-admin-manage-messages-files.md#what-do-you-need-to-know-before-you-begin).
 
-          please note that Admins can release Quarantine messages to external recipient that are not present in thier organization. 
+          Admins can release quarantined messages to external recipients that aren't in their organization.
 
           > [!TIP]
           > The ability to manage quarantined messages using [Exchange Online permissions](/exchange/permissions-exo/permissions-exo) ended in February 2023 per MC447339.
@@ -242,40 +242,36 @@ sections:
         answer: |
           If a user deletes the message from the Teams client, the message is gone, so Preview isn't available in quarantine for the deleted message.
 
-           - question: |
-          I can't see the block sender action button and the Approve release button. What's going on?
+      - question: |
+          I can't see the **Block sender** button or the **Approve release** button. What's going on?
         answer: |
-          Block sender action is disabled by default for Quarantine messages. However, Admins can create a custom Quarantine policy to include block sender action for end users 
+          The **Block sender** action is disabled by default for quarantined messages. However, admins can create a custom quarantine policy to include the **Block sender** action for end users.
 
-          The Approve release button has been retired and replaced by the release button
+          The **Approve release** button has been retired and replaced by the **Release** button.
 
-           - question: |
-          Filter and search is not working. What's going on?
+      - question: |
+          **Filter** and **Search** aren't working. What's going on?
         answer: |
-          The search box only applies to loaded Quarantine messages. 
-          
-          To filter by internet message ID, You need to ensure that the pointed brackets <> are always inluded (even on PowerShell) 
+          The **Search** box applies to loaded quarantine messages only.
 
+          To filter by Internet Message ID, you need to ensure that angle brackets `<>` are always inluded (even in PowerShell).
 
-         - question: |
-          Released Quarantine messages are still showing up in Quarantine. What's going on?
+      - question: |
+          Released quarantine messages are still showing up in Quarantine. What's going on?
         answer: |
-          Released messages will still show up/remain in Quarantine unless it is explicitly deleted from Quarantine 
+          Released messages remain visible in quarantine unless they're explicitly deleted from quarantine.
 
-          - question: |
-          Release request Alert are not getting generated. What's going on?
+      - question: |
+          Release request alerts aren't being generated. What's going on?
         answer: |
-          Audit log needs to enabled in order for Release request alert to be generated
+          Audit logging needs to be enabled (it's on by default).
 
-          - question: |
-          Duplicate / Multiple Quarantine notification sent to the same user  
+      - question: |
+          Duplicate or multiple quarantine notifications are sent to the same user.
         answer: |
-          mutiple/duplicate Quarantine notification will be sent to a sender address with different alias if SendFromAliasEnabled is True 
+          Mutiple or duplicate quarantine notifications are sent if the SendFromAliasEnabled paraMETER value is True.
 
-
-        - question: |
-          I cant see all the recipient of a Quarantine message. What's going on?
+      - question: |
+          I can't see all recipientS of a quarantined message. What's going on?
         answer: |
-          For a Quarantine message with a large number of recipients, we do not show all the recipients in the UX or Cmdlet. However, the Admin can use the View message header or preview message functionality to see all the recipients  
-
-          
+          For quarantine messages with a large number of recipients, we don't show all of the recipients. However, admins can use **View message header** or **Preview message** to see all recipients.
