--- a/defender-xdr/TOC.yml
+++ b/defender-xdr/TOC.yml
@@ -483,7 +483,7 @@
           href: https://aka.ms/soc-opt-ref
     - name: Manage multitenant environments
       items:
-        - name: Multitenant management in Microsoft Defender XDR
+        - name: Overview
           href: mto-overview.md
         - name: Set up multitenant management
           href: mto-requirements.md
