Squashed commit of the following:
commit 54f6ca0faba5f13fe954b0da03456754dd6ceddc
Merge: 09f8f17e98 071f8b5a91
Author: Sinead O'Sullivan <siosulli@microsoft.com>
Date:   Thu Jul 18 13:38:44 2024 +0100

    Merge branch 'main' into siosulli-exclusions

commit 09f8f17e986ba462bef114ec63e1f12abf2b1c6c
Author: Sinead O'Sullivan <siosulli@microsoft.com>
Date:   Sat Jun 29 17:51:03 2024 +0100

    Update exclusions-indictors-scenarios.md

commit 24688c396ad706ef88bd3090ad0827cb440a4650
Author: Sinead O'Sullivan <siosulli@microsoft.com>
Date:   Sat Jun 29 17:48:58 2024 +0100

    Update TOC.yml

commit c8a9b76cbac3b7bd5db0e808562b91300d9785ae
Author: Sinead O'Sullivan <siosulli@microsoft.com>
Date:   Sat Jun 29 17:45:40 2024 +0100

    Update exclusions-indictors-scenarios.md

commit f19f9976755176e48892fe74b983e89b760905c2
Author: Sinead O'Sullivan <siosulli@microsoft.com>
Date:   Sat Jun 29 17:43:27 2024 +0100

    Update exclusions-indictors-scenarios.md

commit 09708118108764879fd81b6c4a1f4d9dbf900dcc
Author: Sinead O'Sullivan <siosulli@microsoft.com>
Date:   Sat Jun 29 17:42:47 2024 +0100

    Update exclusions-indictors-scenarios.md

commit 71d95cbfb51e2545a113d7db2d7537bae2b2989a
Author: Sinead O'Sullivan <siosulli@microsoft.com>
Date:   Sat Jun 29 17:40:16 2024 +0100

    Update exclusions-indictors-scenarios.md

commit 90eab6bdb6c769bfb9d1979254e16dc1f27e2287
Author: Sinead O'Sullivan <siosulli@microsoft.com>
Date:   Sat Jun 29 17:38:12 2024 +0100

    Update exclusions-indictors-scenarios.md

commit d2abf336ead7d269beb630f69131e142559ed226
Author: Sinead O'Sullivan <siosulli@microsoft.com>
Date:   Sat Jun 29 17:35:55 2024 +0100

    Update exclusions-indictors-scenarios.md

commit d5af6615a98e344a61904ebf249556eb2d859969
Author: Sinead O'Sullivan <siosulli@microsoft.com>
Date:   Sat Jun 29 17:34:09 2024 +0100

    Update exclusions-indictors-scenarios.md

commit 0a7741f4066f569f58772f409da2417cb662de48
Author: Sinead O'Sullivan <siosulli@microsoft.com>
Date:   Sa

--- a/defender-endpoint/TOC.yml
+++ b/defender-endpoint/TOC.yml
@@ -542,6 +542,16 @@
 
   - name: Detect threats and protect endpoints
     items:
+    - name: Defender for Endpoint Security Operations Guide 
+      href: mde-sec-ops-guide.md
+    - name: Navigating exclusions for Defender for Endpoint and Microsoft Defender Antivirus
+      items:
+      - name: Exclustions overview
+        href: navigate-defender-endpoint-antivirus-exclusions.md
+      - name: Using submissions, supressions and exclusions
+        href: submissions-supressions-exclustions.md
+      - name:  Control unwanted behaviors with exclusions and indicators
+        href: exclusions-indictors-scenarios.md
     - name: Microsoft Defender Vulnerability Management
       href: /defender-vulnerability-management
     - name: Device discovery
@@ -707,8 +717,6 @@
         href: safety-scanner-download.md
       - name: Configure Microsoft Defender Antivirus features
         href: configure-microsoft-defender-antivirus-features.md
-      - name: Manage exclusions for Defender for Endpoint and Microsoft Defender Antivirus
-        href: defender-endpoint-antivirus-exclusions.md
       - name: Cloud protection and Microsoft Defender Antivirus
         href: cloud-protection-microsoft-defender-antivirus.md
         items:
@@ -859,8 +867,9 @@
           href: restore-quarantined-files-microsoft-defender-antivirus.md
 
       - name: Microsoft Defender Antivirus exclusions
-        href: configure-exclusions-microsoft-defender-antivirus.md
         items:
+        - name: Configure custom exclusions
+          href: configure-exclusions-microsoft-defender-antivirus.md
         - name: Exclusions based on file extension and folder location
           href: configure-extension-file-exclusions-microsoft-defender-antivirus.md
         - name: Exclusions for files opened by processes
