--- a/defender-endpoint/TOC.yml
+++ b/defender-endpoint/TOC.yml
@@ -386,6 +386,15 @@
         items:
           - name: Safe deployment practices
             href: mde-sdp-strategy.md
+      - name: Navigating exclusions for Defender for Endpoint and Microsoft Defender Antivirus
+        items:
+          - name: Exclustions overview
+            href: navigate-defender-endpoint-antivirus-exclusions.md
+          - name: Using submissions, supressions and exclusions
+            href: submissions-supressions-exclustions.md
+          - name:  Control unwanted behaviors with exclusions and indicators
+            href: exclusions-indictors-scenarios.md
+
       - name: Defender for Endpoint Security Operations Guide 
         href: mde-sec-ops-guide.md
       - name: Troubleshoot
@@ -542,16 +551,6 @@
 
   - name: Detect threats and protect endpoints
     items:
-    - name: Defender for Endpoint Security Operations Guide 
-      href: mde-sec-ops-guide.md
-    - name: Navigating exclusions for Defender for Endpoint and Microsoft Defender Antivirus
-      items:
-      - name: Exclustions overview
-        href: navigate-defender-endpoint-antivirus-exclusions.md
-      - name: Using submissions, supressions and exclusions
-        href: submissions-supressions-exclustions.md
-      - name:  Control unwanted behaviors with exclusions and indicators
-        href: exclusions-indictors-scenarios.md
     - name: Microsoft Defender Vulnerability Management
       href: /defender-vulnerability-management
     - name: Device discovery
@@ -717,6 +716,8 @@
         href: safety-scanner-download.md
       - name: Configure Microsoft Defender Antivirus features
         href: configure-microsoft-defender-antivirus-features.md
+      - name: Manage exclusions for Defender for Endpoint and Microsoft Defender Antivirus
+        href: defender-endpoint-antivirus-exclusions.md
       - name: Cloud protection and Microsoft Defender Antivirus
         href: cloud-protection-microsoft-defender-antivirus.md
         items:
